fix(package): set z-index for headers to prevent contents to overlay on the headers

--- a/src/style/components/_group-header.scss
+++ b/src/style/components/_group-header.scss
@@ -7,7 +7,8 @@
   top: 0;
   width: 100%;
   height: rem($group-header-height);
-
+  z-index: 900;
+  
   &__logo-block {
     float: left;
     padding-right: rem(32px);
