--- a/src/style/components/_header.scss
+++ b/src/style/components/_header.scss
@@ -7,6 +7,7 @@
   top: 0;
   width: 100%;
   height: rem($header-height);
+  z-index: 900;
 
   &__logo-block {
     float: left;
